--- a/README
+++ b/README
@@ -31,6 +31,8 @@ Included in this repository:
 Quake spec 3.4.1
 Quake C manual v1.01 (html linked version)
 QUake C code base (html linked version)
+Quake FAQ (unofficial) v2.0 - sept 1996
+Master entities.def (GTK radiant) v1.8.1
 
 I plan to add some documents to this when I have some time to do the proper editing.
 
