qspec readme tag brand update

--- a/README
+++ b/README
@@ -13,7 +13,8 @@
          $
          *
 
-The current plan is to create a repository for tools and information I have on my hard drive.
+-------------------------------------------------------------------------------------------
+Current ops: create a repository for tools and information I have on my hard drive.
 
 Much of the tools or scripts to use them I created myself.  Along with much documentation.
 Some of this used to be found on the web, but now it is getting scarce.
@@ -34,4 +35,8 @@ QUake C code base (html linked version)
 
 I plan to add some documents to this when I have some time to do the proper editing.
 
--6
+-------------------------------------------------------------------------------------------
+
+\|/
+-Support free code by Six gaming on Patreon: https://www.patreon.com/six_gaming
+/|\
