--- a/README
+++ b/README
@@ -32,6 +32,8 @@ Included in this repository:
 Quake spec 3.4.2
 Quake C manual v1.01 (html linked version)
 Quake C code base (html linked version)
+Quake FAQ (unofficial) v2.0 - sept 1996
+Master entities.def (GTK radiant) v1.8.1
 FTE qcc precompiler, keywords, warning v1.0
 
 I plan to add some documents to this when I have some time to do the proper editing.
