--- a/README
+++ b/README
@@ -13,7 +13,8 @@
          $
          *
 
-The current plan is to create a repository for tools and information I have on my hard drive.
+-------------------------------------------------------------------------------------------
+Current ops: create a repository for tools and information I have on my hard drive.
 
 Much of the tools or scripts to use them I created myself.  Along with much documentation.
 Some of this used to be found on the web, but now it is getting scarce.
@@ -28,12 +29,17 @@ The point is to keep quake development alive.
 
 Included in this repository:
 
-Quake spec 3.4.1
+Quake spec 3.4.2
 Quake C manual v1.01 (html linked version)
-QUake C code base (html linked version)
+Quake C code base (html linked version)
 Quake FAQ (unofficial) v2.0 - sept 1996
 Master entities.def (GTK radiant) v1.8.1
+FTE qcc precompiler, keywords, warning v1.0
 
 I plan to add some documents to this when I have some time to do the proper editing.
 
--6
+-------------------------------------------------------------------------------------------
+
+\|/
+-Support free code by Six gaming on Patreon: https://www.patreon.com/six_gaming
+/|\
